--- a/index.html
+++ b/index.html
@@ -1,2 +1,64 @@
-<h1>Hello!</h1>
-<h1>Hello!</h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>HTML Tutorial</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 20px;
+            padding: 20px;
+            background-color: #f4f4f4;
+        }
+        h1 {
+            color: #333;
+        }
+        .container {
+            background: white;
+            padding: 20px;
+            border-radius: 5px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        }
+    </style>
+</head>
+<body>
+    <div class="container">
+        <h1>Welcome to HTML</h1>
+        <p>This is a simple HTML page.</p>
+        
+        <h2>Basic Elements</h2>
+        <p><strong>Paragraph:</strong> This is a paragraph.</p>
+        <p><strong>Link:</strong> <a href="https://www.w3schools.com">Visit W3Schools</a></p>
+        <p><strong>Image:</strong></p>
+        <img src="https://via.placeholder.com/150" alt="Sample Image">
+
+        <h2>Forms</h2>
+        <form>
+            <label for="name">Name:</label>
+            <input type="text" id="name" name="name">
+            <br><br>
+            <label for="email">Email:</label>
+            <input type="email" id="email" name="email">
+            <br><br>
+            <input type="submit" value="Submit">
+        </form>
+
+        <h2>Tables</h2>
+        <table border="1">
+            <tr>
+                <th>Name</th>
+                <th>Age</th>
+            </tr>
+            <tr>
+                <td>John</td>
+                <td>25</td>
+            </tr>
+            <tr>
+                <td>Jane</td>
+                <td>22</td>
+            </tr>
+        </table>
+    </div>
+</body>
+</html>
