--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
         <h2>Forms</h2>
         <form>
-            <label for="name">Name:</label>
+            <label for="name">Natttme:</label>
             <input type="text" id="name" name="name">
             <br><br>
             <label for="email">Email:</label>
